Rename builder package to de.sormuras.bach.action and hide it